svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-svc
  namespace: sonarqube
spec:
  selector:
    app: sonarqube
  ports:
  - name: http-port
    port: 9000
    targetPort: 9000
