ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sonarqube
  name: sonarqube
  annotations:
    kubernetes.io/ingress.class: "traefik"
    #    traefik.ingress.kubernetes.io/rewrite-target: /admin/
    #    kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: sonarqube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube-svc
            port:
              number: 9000
  - host: sonarqube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarqube-svc
            port:
              number: 9000
